--- a/wally.toml
+++ b/wally.toml
@@ -6,3 +6,6 @@ realm = "shared"
 
 [dependencies]
 Fusion = "elttob/fusion@0.2.0"
+Roact = "roblox/roact@1.4.4"
+React = "jsdotlua/react@17.0.2"
+ReactRoblox = "jsdotlua/react-roblox@17.0.2"
