--- a/wally.toml
+++ b/wally.toml
@@ -9,3 +9,4 @@ Fusion = "elttob/fusion@0.2.0"
 Roact = "roblox/roact@1.4.4"
 React = "jsdotlua/react@17.0.2"
 ReactRoblox = "jsdotlua/react-roblox@17.0.2"
+Pract = "ambergracerblx/pract@1.0.10"
