--- a/wally.toml
+++ b/wally.toml
@@ -10,3 +10,4 @@ Roact = "roblox/roact@1.4.4"
 React = "jsdotlua/react@17.0.2"
 ReactRoblox = "jsdotlua/react-roblox@17.0.2"
 Pract = "ambergracerblx/pract@1.0.10"
+vide = "centau/vide@0.1.1"
